# NES.cpp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md  tests.mk
CMakeModules/: FindLuaJIT.cmake  FindQt.cmake
docs/compile/: build_linux.md  build_macos.md  build_windows.md
include/: cartridge.hpp  constants.hpp  cpu.hpp  lua.hpp  mapper.hpp  memory.hpp  ppu.hpp
mappers/: DOCS.md  lib.lua  mp0.lua  mp1.lua  mp2.lua  mp3.lua  mp4.lua  mp7.lua  mp9.lua
src/: cartridge.cpp  cartridge.hpp  cpu.cpp  cpu.hpp  lua.cpp  lua.hpp  main.cpp  mapper.hpp  mapperFactory.hpp  memory.cpp  memory.hpp  ppu.cpp  ppu.hpp  utils.hpp
src/common/: debug.h  error.h  thread.h  types.h
src/core/: apu.cpp  apu.h  apu.hpp  cartridge.cpp  cartridge.h  cartridge.hpp  common.hpp  constants.hpp  cpu.cpp  cpu.h  cpu.hpp  cpu_op.h  cpu_op.hpp  lua.cpp  lua.h  lua.hpp  mapper.h  mapper.hpp  mem.cpp  mem.h  mem.hpp  memory.cpp  memory.hpp  ppu.cpp  ppu.h  ppu.hpp
src/gui/: nes_audio.cpp  nes_audio.hpp  nes_frame.cpp  nes_frame.hpp  nes_state.hpp  state.h  update.cpp  update.h  w_logs.cpp  w_logs.h  w_main.cpp  w_main.h  w_main.hpp  w_settings.cpp  w_settings.h
src/gui/forms/: logs.ui  main.ui  settings.ui  w_main.ui
src/gui/forms/settings/: audio.ui  layout.ui
src/gui/modules/: audio.cpp  audio.h  frame.cpp  frame.h
src/mappers/: mapper0.cpp  mapper0.hpp  mapper1.cpp  mapper1.hpp  mapper2.cpp  mapper2.hpp  mapper3.cpp  mapper3.hpp  mapper4.cpp  mapper4.hpp
tests/: c6502.cpp  gt_cpu.cpp
